--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,27 @@
 /*  your css code here. If applicable */
+ body {
+    background-color: rgb(204, 204, 204);
+    font-family: Arial, sans-serif;
+    padding: 20px;
+  }
+  h1, h2 {
+    text-align: center;
+  }
+  ul {
+    padding: 0;
+  }
+  li {
+    list-style-type: none;
+    margin: 5px 0;
+  }
+  a {
+    text-decoration-line: none;
+    color: black;
+  }
+  .player_one, .player_two {
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+    border-radius: 10px;
+    margin: 20px auto;
+    max-width: 600px;
+  }
